--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,8 +1,14 @@
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css');
 
+html {
+	margin: 0;
+	padding: 0;
+}
+
 header {
-	font-family: "Pretendard Variable";
-	border-bottom : 2px solid #efefef;
+	width: 1440px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* Header */
@@ -10,14 +16,11 @@ header {
 	display : flex;
 	justify-content: center;
 	align-items: center;
-	
 	background: #FFFFFF;
-	margin : 0 auto;
 	height : 100px;
-	width : 1440px;
-	
 	position: relative;
 	z-index: 2;
+	border-bottom : 2px solid #c0c0c0;
 }
 
 .header a {
@@ -37,17 +40,15 @@ header {
 
 .main-dropdown, .login-container {
  	position: absolute;
- 	
 	display: flex;
 	justify-content: center;
 	align-items: center;
- 	
-	left : 93%;
+	left : 94%;
  	height : 65px;
 }
 
 .login-container {
-	left: 86.5%;
+	left: 88%;
 	width: 150px;
 	height: 45px;
 	flex-direction: row;
@@ -73,7 +74,6 @@ header {
   	border-radius:50%;
   	width: 50px;
   	height: 50px;
-  	
   	overflow: hidden;    
   	cursor:pointer;
 }
@@ -91,7 +91,6 @@ header {
 	background-color:#ffffff;
 	border-radius:5px;
 	box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
-	
 	z-index : 1;
 }
 
@@ -104,7 +103,7 @@ header {
   display : block;
   text-decoration : none;
   color : rgb(37, 37, 37);
-  font-size: 12px;
+  font-size: 14px;
   padding : 12px 20px;
 }
 
@@ -121,11 +120,11 @@ header {
 
 body {
 	font-family: "Pretendard Variable";
-	margin : 0px;
-	background: #FFFFFF;
+	margin : 0;
+	background: linear-gradient(white, #eff1f9d7);
 	padding-bottom: 80px;
 	position: relative;
-	min-height: 1080px;
+	min-height: 960px;
 	display: flex;
 	flex-direction: column;
 }
@@ -135,7 +134,8 @@ body {
 	min-height: 100vh;
 	display: flex;
     margin: 0 auto;
-	padding-bottom: 80px;
+    padding-bottom: 25px;
+	background-color: white;
 }
 
 #wrap{
@@ -146,17 +146,11 @@ body {
 /* =======================================footer========================================*/
 footer {
 	height: 80px;
-	/* background-color: #FFFFFF;
-	padding-top: 25px;
-	margin-top: 50px;*/
 	text-align: center;
 	text-decoration: none;
 	color: #686868;
 	font-size: 18px;
-	/* position: absolute;
-  	bottom: 0; */
   	position : absolute;
-  	/* transform : translateY(-100%); */
   	left: 0;
 	right: 0;
 	bottom: 0;
@@ -168,10 +162,12 @@ footer {
 .footer-container {
 	height: 100%;
 	background-color: #FAFAFA;
+	padding-top: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	text-align: center;
+	margin: 0 auto;
+	border-top : 1px solid #c0c0c0;
 }
 
 .footer-image {
@@ -246,10 +242,10 @@ footer {
     margin: 0px;
 }
 .side-menu {
-    width: 220px;
+    width: 200px;
     float: left;
     margin-top: 25px;
-    /* margin-left: 50px; */
+    margin-left: 20px;
 }
 .line {
     width: 0px;
@@ -278,7 +274,7 @@ footer {
 }
 #current-title {
     font-weight: 700;
-    font-color: #3D56B2;
+    color: #3D56B2;
     font-size: 24px;
 }
 
@@ -330,6 +326,10 @@ select {
 
 /* =======================================table========================================*/
 
+.table-container {
+	min-height: 400px;
+}
+
 table {
     border-collapse: collapse;
     text-align: center;
@@ -369,4 +369,14 @@ a {
 a:hover {
     color : #3D56B2;
     font-weight: 600;
+}
+
+.nothing {
+	height: 500px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 30px;
+	font-weigth: 600;
+	color: #999999;
 }
