--- a/src/main/resources/static/css/registeredGoods.css
+++ b/src/main/resources/static/css/registeredGoods.css
@@ -6,7 +6,8 @@
     float: left;
     align-items: left;
     margin-top: 25px;
-    margin-left: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .title {
