feat: add order 결제 확인 메일

--- a/src/main/resources/static/css/attendedGoodsDetail.css
+++ b/src/main/resources/static/css/attendedGoodsDetail.css
@@ -74,6 +74,13 @@
     justify-content: space-between;
     margin-bottom: 5px;
 }
+.item-name {
+	width: 400px;
+}
+.item-price {
+	width: 100px;
+	text-align: right;
+}
 .info-container>hr {
     width: 450px;
     height: 0px;
