fix: register itemList

--- a/src/main/resources/static/css/registerGoods.css
+++ b/src/main/resources/static/css/registerGoods.css
@@ -1,11 +1,24 @@
 @charset "UTF-8";
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css");
 
+/*
+body {
+ 
+   font-family: "Pretendard Variable";
+	background-color: linear-gradient(to top, red, yellow);
+}
+
+.content {
+ 
+	background: linear-gradient(white, #eff1f9d7);
+}
+
+*/
+
+
 .main-container{
 	flex-direction: column;
-	background-color: white;
-	width: 660px;
-	margin: 0 auto;
+	
 }
 
 .main-container> div {
@@ -182,8 +195,8 @@ button {
 /* 상품 구성 리스트 */
 ul {
   list-style-type: none;
-  background-color: #3D56B2;
-  border-radius: 5px;
+  background-color: #ececec;
+  border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   padding: 20px;
 }
@@ -194,10 +207,22 @@ ul {
   
 .listItemName{
 	width : 450px;
-	height: 40px;
 	
 }
 
+.item-row{
+	display: flex;
+	flex-direction: row;	
+	justify-content: space-between;
+}
+
+.item{
+  width: 560px;
+  color: black;
+  background-color: white;
+  border: 1px solid #3D56B2;
+  border-radius: 5px;
+}
 .items {
   width: 400px;
   height: 45px;
@@ -208,15 +233,32 @@ ul {
   border-radius: 5px;
 }
 .itemdelete {
-  border: 1px solid grey;
-  width: 40px;
-  height: 44px;
-  margin-left: 10px;
+  border: none;
+  height: 30px; 
+  width: 15px;
+  margin-right: 10px;
+  box-shadow: none;
+  
+
 }
-#item {
-  text-align: left;
-   height: 45px;
+.listItemName{
+	padding-top: 3px;
 }
+.listItemQuantity{
+	padding-bottom: 3px;
+}
+.itemdelete:hover{
+  	background-color : white;
+  	color : #3D56B2;
+  }
+  
+.item> div{
+  	font-size: 18px;
+  	margin-left: 10px;
+  	font-weight: 400;
+  }
+
+
 
 /* 목표금액 */
 #targetAmountInput {
@@ -231,22 +273,13 @@ ul {
 }
 
 /* 정산받을 계좌 정보 */
-#bankCategorySelect {
-	width: 150px;
-	margin-right: 10px;
-}
-
 #bankAccountNumber {
-  width: 425px;
+  width: 380px;
   color : #3D56B2;
 	border : 1px solid #3D56B2;
 	border-radius : 5px;
 	background-color : #ffffff;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-}
-
-#registGoods {
-	margin-bottom: 20px;
 }
 
 /* 굿즈 만들기 */
@@ -258,10 +291,6 @@ ul {
     color: #3D56B2;
     background: white;
   }
-}
-
-#footer {
-	background-color : #eff1f9d7;
 }
 
 
