--- a/src/main/resources/static/css/mainLayout.css
+++ b/src/main/resources/static/css/mainLayout.css
@@ -73,7 +73,7 @@ input#search-bar{
 	padding-top : 10px;
 	padding-bottom : 10px;
 	margin: 0 auto;
-	border-bottom : 1px solid #808080;
+	
 }
 
 .main-search-category-bundle {
@@ -176,4 +176,7 @@ select {
 	font-weight : 400;
 }
 
+.header{
+	border-bottom : none;
+}
 
