--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,3 +1,5 @@
+
+/* Login.css */
 body {
     font-family: Arial, sans-serif;
 }
@@ -52,6 +54,7 @@ margin: 0 auto;
     cursor: pointer;
     width: 100%;
     font-size: 18px;
+    border-radius: 5px;
 }
 
 .container button:hover {
@@ -63,3 +66,55 @@ display: grid;
 grid-template-columns: 1fr 1fr;
 gap: 12.5px;
 }
+
+/* signUp.css */
+
+h3 {
+    margin: 19px 0 8px;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+
+.box {
+    display: block;
+    width: 100%;
+    height: 51px;
+    border: solid 1px #dadada;
+    padding: 10px 14px 10px 14px;
+    box-sizing: border-box;
+    background: #fff;
+    position: relative;
+}
+
+.int {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 29px;
+    border: none;
+    background: #fff;
+    font-size: 15px;
+}
+
+/* 좌우 버튼 디자인 */
+.radio-btn-label {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.radio-btn {
+    padding: 8px 15px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* 선택된 버튼 스타일 */
+.radio-btn.selected {
+    background-color: #13258f;
+    color: #fff;
+    border-color: #007bff;
+}
+
