--- a/src/main/resources/static/css/card.css
+++ b/src/main/resources/static/css/card.css
@@ -6,7 +6,7 @@
     margin-top: 30px;
     margin-left: 18px;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
   
 .card {
@@ -64,6 +64,7 @@
     font-weight : 700;
 	font-size : 22px;
     margin-top: 10px;
+    margin-left: 7px;
 }
  
 .heart-btn, .alarm-btn {
