--- a/src/main/resources/static/css/goodsDetail.css
+++ b/src/main/resources/static/css/goodsDetail.css
@@ -274,3 +274,27 @@ div.top-right{
 	width: 100%;
 	height: auto;
 }
+.btn-pay-container {
+	height: 60px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+button {
+	width: 50px;
+	height: 50px;
+}
+button>div {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-size: 14px;
+	font-weight: 400;
+}
+button>div>.bi {
+	padding-right: 0px;
+}
+button>div>span {
+	vertical-align: middle;
+}
